--- a/public/elements/sps-page-viewers.html
+++ b/public/elements/sps-page-viewers.html
@@ -181,6 +181,7 @@
           }
           this.fire('firetoast', { message: "Viewer " + action_word + "!"});
           this.fire("reload-viewers", { });
+          this._reloadViewers();
         } else {
           //console.log(e)
           var det = "NO_DETAILS";
