--- a/public/elements/sps-page-dashboard.html
+++ b/public/elements/sps-page-dashboard.html
@@ -34,21 +34,8 @@ Example:
        content-type="application/json"
        last-response="{{enabledObjecte}}"></iron-ajax>
    <iron-ajax
-       auto
-       id="siteAjaxt"
-       url="../api/1.0/settings/enabled12"
-       handle-as="json"
-       content-type="application/json"
-       last-response="{{enabledObjectt}}"></iron-ajax>
-   <iron-ajax
        id="siteAjaxeE"
        url="../api/1.0/settings/enabled11"
-       handle-as="json"
-       on-response="logg"
-       content-type="application/json"></iron-ajax>
-   <iron-ajax
-       id="siteAjaxtE"
-       url="../api/1.0/settings/enabled12"
        handle-as="json"
        on-response="logg"
        content-type="application/json"></iron-ajax>
@@ -56,8 +43,7 @@ Example:
       <div class="row">
       <div class="12u">
         <paper-material elevation="1">
-          11th Registrations allowed: <paper-checkbox on-change="enabledTogglee" checked="[[parseBinToBool(enabledObjecte.entry_value)]]"></paper-checkbox>
-          12th Registrations allowed: <paper-checkbox on-change="enabledTogglet" checked="[[parseBinToBool(enabledObjectt.entry_value)]]"></paper-checkbox>
+          Registrations allowed: <paper-checkbox on-change="enabledTogglee" checked="[[parseBinToBool(enabledObjecte.entry_value)]]"></paper-checkbox>
         </paper-material>
       </div>
       </div>
@@ -69,9 +55,6 @@ Example:
       properties: {
         enabledObjecte: {
           type: Object
-        },
-        enabledObjectt: {
-          type: Object
         }
       },
       parseBinToBool: function(str) {
@@ -82,14 +65,6 @@ Example:
         var x = e.target.checked ? "1" : "0";
         this.$.siteAjaxeE.body = JSON.stringify({ entry_key: "enabled11", entry_value: x });
         this.$.siteAjaxeE.generateRequest();
-        console.log(e);
-      },
-      enabledTogglet: function(e) {
-        this.$.siteAjaxtE.method = "PUT";
-        var x = e.target.checked ? "1" : "0";
-        this.$.siteAjaxtE.body = JSON.stringify({ entry_key: "enabled12", entry_value: x });
-        console.log(this.$.siteAjaxtE.body);
-        this.$.siteAjaxtE.generateRequest();
         console.log(e);
       },
       logg: function(e) {
